--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "server-rest",
   "version": "0.3.1",
   "main": "index.js",
-  "repository": "/home/RED/fhorro/Dropbox/Privado/lab/server-rest/",
+  "repository": "https://github.com/felixhorro/server-rest/",
   "author": "Félix Horro Pita <fhorro@corunet.com>",
   "license": "MIT",
   "devDependencies": {
